force-app/main/default/objects/AVO_Compliance__c/fields/AVO_RefPermitAppID__c.field-meta.xml
<CustomField>
    <fullName>AVO_RefPermitAppID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefPermitAppID</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>RefPermitAppID can only look up to a Permit or Undocumented Source.</errorMessage>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>equals</operation>
            <value>Agricultural Water Withdrawal Permit</value>
        </filterItems>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>equals</operation>
            <value>Undocumented Source</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>