force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Resolution__c.field-meta.xml
<CustomField>
    <fullName>AVO_Resolution__c</fullName>
    <label>Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>