force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliances (Resolved By)</relationshipLabel>
    <relationshipName>Compliances1</relationshipName>
    <type>Lookup</type>
</CustomField>