force-app/main/default/objects/AVO_Compliance__c/fields/AVO_ResolvedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_ResolvedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>