force-app/main/default/objects/AVO_Compliance__c/fields/AVO_ResolvedDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_ResolvedDt__c</fullName>
    <label>ResolvedDt</label>
    <type>DateTime</type>
</CustomField>