force-app/main/default/objects/AVO_Compliance__c/fields/AVO_ResTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AVO_ResTypeCode__c</fullName>
    <label>ResTypeCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Meter Installed &amp; Approved for GW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Active Meter Installed &amp; Approved for SW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Active Meters Installed &amp; Approved For All Withdrawals on this Permit</fullName>
            </value>
            <value>
                <fullName>Add GW Withdrawal(s) To Existing Permit</fullName>
            </value>
            <value>
                <fullName>Add SW Withdrawal(s) To Existing Permit</fullName>
            </value>
            <value>
                <fullName>Ag Permit Revoked/Relinquished</fullName>
            </value>
            <value>
                <fullName>Ag Unpermitted Acres Not Currently In Use</fullName>
            </value>
            <value>
                <fullName>Already Plugged &amp; Abandoned Floridan Well</fullName>
            </value>
            <value>
                <fullName>Already Plugged &amp; Abandoned Non-Floridan Well</fullName>
            </value>
            <value>
                <fullName>Application Received for Undocumented Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Capped Floridan Well / Not In Use</fullName>
            </value>
            <value>
                <fullName>Capped Non-Floridan Well / Not In Use</fullName>
            </value>
            <value>
                <fullName>Case Created In Error / Close Case</fullName>
            </value>
            <value>
                <fullName>Contractor Refunded Customer</fullName>
            </value>
            <value>
                <fullName>Contractor Resolved Customer’s Issues</fullName>
            </value>
            <value>
                <fullName>Corrected Permit</fullName>
            </value>
            <value>
                <fullName>Decrease Permitted Acres</fullName>
            </value>
            <value>
                <fullName>Decrease Permitted GW GPMs</fullName>
            </value>
            <value>
                <fullName>Decrease Permitted SW GPMs</fullName>
            </value>
            <value>
                <fullName>GW Withdrawal Activated/Use Established</fullName>
            </value>
            <value>
                <fullName>GW Withdrawal(s) Already Permitted</fullName>
            </value>
            <value>
                <fullName>Incomplete Construction of Floridan Well / Not in Use</fullName>
            </value>
            <value>
                <fullName>Incomplete Construction of Non-Floridan Well / Not In Use</fullName>
            </value>
            <value>
                <fullName>Increase Permitted Acres</fullName>
            </value>
            <value>
                <fullName>Increase Permitted GW GPMs</fullName>
            </value>
            <value>
                <fullName>Increase Permitted SW GPMs</fullName>
            </value>
            <value>
                <fullName>Irrigated Acres Already Permitted</fullName>
            </value>
            <value>
                <fullName>Irrigated Acres Taken Out of Use / Unable to Permit Acres</fullName>
            </value>
            <value>
                <fullName>LOC Requirements Complete</fullName>
            </value>
            <value>
                <fullName>Modification Requirements Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>