force-app/main/default/objects/AVO_Compliance__c/fields/AVO_ReviewReason__c.field-meta.xml
<CustomField>
    <fullName>AVO_ReviewReason__c</fullName>
    <label>ReviewReason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>