force-app/main/default/objects/AVO_Compliance__c/fields/AVO_RFI_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_RFI_Type__c</fullName>
    <label>RFI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired LOC</fullName>
            </value>
            <value>
                <fullName>Permit Transfer Request</fullName>
            </value>
            <value>
                <fullName>RFI Meter Tampering</fullName>
            </value>
            <value>
                <fullName>Meter Installation Needed</fullName>
            </value>
            <value>
                <fullName>Permit Missing Form</fullName>
            </value>
            <value>
                <fullName>Expiring LOC</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>