force-app/main/default/objects/AVO_Compliance__c/fields/AVO_SettledAmount__c.field-meta.xml
<CustomField>
    <fullName>AVO_SettledAmount__c</fullName>
    <label>SettledAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>