force-app/main/default/objects/AVO_Compliance__c/fields/AVO_StaffNm__c.field-meta.xml
<CustomField>
    <fullName>AVO_StaffNm__c</fullName>
    <label>StaffNm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>