force-app/main/default/objects/AVO_Compliance__c/fields/AVO_StrBuffer__c.field-meta.xml
<CustomField>
    <fullName>AVO_StrBuffer__c</fullName>
    <inlineHelpText>Populate with Values from &quot;None ; CritStrBuf&quot;</inlineHelpText>
    <label>StrBuffer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>