force-app/main/default/objects/AVO_Compliance__c/fields/AVO_SubArea4__c.field-meta.xml
<CustomField>
    <fullName>AVO_SubArea4__c</fullName>
    <inlineHelpText>Populate with Values from  &quot;Yes; No&quot;</inlineHelpText>
    <label>SubArea4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>