force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Suspension__c.field-meta.xml
<CustomField>
    <fullName>AVO_Suspension__c</fullName>
    <inlineHelpText>Populate with Values from &quot;None; GW &amp; SW; SW only; GW only&quot;</inlineHelpText>
    <label>Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>