force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Case</fullName>
            </value>
            <value>
                <fullName>Farmer Initiated Online Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>