force-app/main/default/objects/AVO_Compliance__c/fields/AVO_UDWithdrawalID__c.field-meta.xml
<CustomField>
    <fullName>AVO_UDWithdrawalID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UDWithdrawalID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.AVO_RefApplicationID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>AVO_Withdrawals__c.AVO_Permit__c</field>
            <operation>equals</operation>
            <valueField>$Source.AVO_RefApplicationID__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.AVO_RefPermitAppID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>AVO_Withdrawals__c.AVO_Permit__c</field>
            <operation>equals</operation>
            <valueField>$Source.AVO_RefPermitAppID__c</valueField>
        </filterItems>
        <infoMessage>Withdrawal must belong to the selected Permit/Application.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AVO_Withdrawals__c</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>