force-app/main/default/objects/AVO_Compliance__c/fields/AVO_UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_UpdatedBy__c</fullName>
    <label>UpdatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>