force-app/main/default/objects/AVO_Compliance__c/recordTypes/AVO_Compliance_Case.recordType-meta.xml
<RecordType>
    <fullName>AVO_Compliance_Case</fullName>
    <active>true</active>
    <label>Compliance Case</label>
</RecordType>