force-app/main/default/objects/AVO_Compliance__c/recordTypes/AVO_Farmer_Initiated_Online_Request.recordType-meta.xml
<RecordType>
    <fullName>AVO_Farmer_Initiated_Online_Request</fullName>
    <active>true</active>
    <label>Farmer Initiated Online Request</label>
</RecordType>