force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_AcresOutOfProduction.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_AcresOutOfProduction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(AVO_AcresOutOfProduction__c )),
 AVO_AcresOutOfProduction__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>AVO_AcresOutOfProduction__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to 0.</errorMessage>
</ValidationRule>