force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_Basin_Non_WWSA.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Basin_Non_WWSA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(AVO_CaseClass__c,&quot;WWSA Compliance Case&quot;)),
 ISBLANK( TEXT(AVO_Basin__c) )
)</errorConditionFormula>
    <errorDisplayField>AVO_Basin__c</errorDisplayField>
    <errorMessage>Basin is mandatory for all CaseClass except WWSA Compliance Case.</errorMessage>
</ValidationRule>