force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_Coastal_Non_WWSA.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Coastal_Non_WWSA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(AVO_CaseClass__c,&quot;WWSA Compliance Case&quot;)),
 ISBLANK(  AVO_Coastal24__c  )
)</errorConditionFormula>
    <errorDisplayField>AVO_Coastal24__c</errorDisplayField>
    <errorMessage>Coastal24 is mandatory for all CaseClass except WWSA Compliance Case.</errorMessage>
</ValidationRule>