force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_COFineAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_COFineAmount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( AVO_COFineApplied__c, &quot;Yes&quot; ), OR( AVO_COFineAmount__c &lt;=0, ISBLANK(AVO_COFineAmount__c ) ))</errorConditionFormula>
    <errorDisplayField>AVO_COFineAmount__c</errorDisplayField>
    <errorMessage>COFineAmount must be greater than 0 when COFineApplied is Yes.</errorMessage>
</ValidationRule>