force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_CompStatus_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_CompStatus_Resolved</fullName>
    <active>true</active>
    <description>Once CompStatus is Resolved, it can&apos;t be changed except by admins.</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt; &quot;System Administrator&quot;, ISCHANGED( AVO_CompStatus__c ),  ISPICKVAL(PRIORVALUE(AVO_CompStatus__c), &quot;Resolved&quot;)  )</errorConditionFormula>
    <errorDisplayField>AVO_CompStatus__c</errorDisplayField>
    <errorMessage>CompStatus cannot be changed once it is Resolved.</errorMessage>
</ValidationRule>