force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_ExcessGPM.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_ExcessGPM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(AVO_Comp_Ref__c, &quot;Irrigating Acres Over Permit Capacity&quot;),
  OR(
    AVO_ExcessGPM__c &lt; 0,
    ISBLANK(AVO_ExcessGPM__c)
  )
)</errorConditionFormula>
    <errorDisplayField>AVO_ExcessGPM__c</errorDisplayField>
    <errorMessage>ExcessGPM must be equal to or greater than 0 when Comp_Ref is Irrigating Acres Over Permit Capacity.</errorMessage>
</ValidationRule>