force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_Geolocation_Non_WWSA.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Geolocation_Non_WWSA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(AVO_CaseClass__c,&quot;WWSA Compliance Case&quot;)),
 OR(ISBLANK( AVO_Geolocation__Latitude__s ), ISBLANK( AVO_Geolocation__Longitude__s ))
)</errorConditionFormula>
    <errorMessage>Geolocation is mandatory for all CaseClass except WWSA Compliance Case.</errorMessage>
</ValidationRule>