force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_Irrigated_Acres.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Irrigated_Acres</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(AVO_CaseClass__c, &quot;Permit Violations Compliance Case&quot;),
  ISPICKVAL(AVO_Comp_Ref__c, &quot;Irrigating Acres Over Permit Capacity&quot;),
  OR(
    ISBLANK(AVO_Irrigated_Acres__c),
    AVO_Irrigated_Acres__c &lt; 0
  )
)</errorConditionFormula>
    <errorDisplayField>AVO_Irrigated_Acres__c</errorDisplayField>
    <errorMessage>Irrigated Acres must be equal to or greater than 0 when Comp_Ref is Irrigating Acres Over Permit Capacity.</errorMessage>
</ValidationRule>