force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_LuOwner_WWSA.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_LuOwner_WWSA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( AVO_CaseClass__c , &quot;WWSA Compliance Case&quot;), ISBLANK( AVO_LuOwnerO_wnerContactId__c ))</errorConditionFormula>
    <errorDisplayField>AVO_LuOwnerO_wnerContactId__c</errorDisplayField>
    <errorMessage>LuOwner_OwnerContactId is mandatory when CaseClass is WWSA Compliance Case.</errorMessage>
</ValidationRule>