force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_MeterComplianceCase_FieldRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_MeterComplianceCase_FieldRestriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name != &apos;AVO Customer Community Login - Applicant&apos;,
    ISPICKVAL(AVO_CaseClass__c, &quot;Meter Compliance Case&quot;),
    OR(
        ISCHANGED(AVO_RefPermitAppID__c),
        ISCHANGED(AVO_AppID__c),
        AND(
            ISNEW(),
            OR(
                NOT(ISBLANK(AVO_RefPermitAppID__c)),
                NOT(ISBLANK(AVO_AppID__c))
            )
        )
    )
	
)</errorConditionFormula>
    <errorMessage>This field cannot be edited for the selected Case Class.</errorMessage>
</ValidationRule>