force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_PermitViolationCase_FieldRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_PermitViolationCase_FieldRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name != &apos;AVO Customer Community Login - Applicant&apos;,
    ISPICKVAL(AVO_CaseClass__c, &quot;Permit Violations Compliance Case&quot;),
    OR(
        ISCHANGED(AVO_RefMeterID__c),
        AND(
            ISNEW(),
            NOT(ISBLANK(AVO_RefMeterID__c))
        )
    )
)</errorConditionFormula>
    <errorMessage>For Permit Violation Compliance Cases, RefMeterID field is read-only and cannot be modified</errorMessage>
</ValidationRule>