force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_ResolvedDt.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_ResolvedDt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( AVO_CompStatus__c, &quot;Resolved&quot; ),
ISBLANK( AVO_ResolvedDt__c )
)</errorConditionFormula>
    <errorDisplayField>AVO_ResolvedDt__c</errorDisplayField>
    <errorMessage>ResolvedDt must be populated when CompStatus is Resolved.</errorMessage>
</ValidationRule>