force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_ResTypeCode.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_ResTypeCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( AVO_CompStatus__c, &quot;Resolved&quot; ),
ISBLANK(  TEXT(AVO_ResTypeCode__c) )
)</errorConditionFormula>
    <errorDisplayField>AVO_ResTypeCode__c</errorDisplayField>
    <errorMessage>ResTypeCode must be populated when CompStatus is Resolved.</errorMessage>
</ValidationRule>