force-app/main/default/objects/AVO_Compliance__c/validationRules/AVO_Subarea_Non_WWSA.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Subarea_Non_WWSA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(AVO_CaseClass__c,&quot;WWSA Compliance Case&quot;)),
 ISBLANK( AVO_SubArea4__c )
)</errorConditionFormula>
    <errorDisplayField>AVO_SubArea4__c</errorDisplayField>
    <errorMessage>SubArea4 is mandatory for all CaseClass except WWSA Compliance Case.</errorMessage>
</ValidationRule>