force-app/main/default/objects/AVO_Compliance__c/validationRules/NOV_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NOV_Type_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    $Profile.Name != &apos;AVO Customer Community Login - Applicant&apos;,
    ISPICKVAL(PRIORVALUE(AVO_Is_NOV__c), &quot;Yes&quot;),
    ISBLANK(TEXT(AVO_NOV_Type__c)),
    NOT(ISPICKVAL(AVO_Is_NOV__c, &quot;Issued Notice of Violation&quot;))
)</errorConditionFormula>
    <errorDisplayField>AVO_NOV_Type__c</errorDisplayField>
    <errorMessage>NOV Type should not be blank when Is NOV is Yes</errorMessage>
</ValidationRule>