force-app/main/default/objects/AVO_Compliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AVO_CompStatus__c</columns>
    <columns>AVO_CompAction__c</columns>
    <columns>AVO_CaseClass__c</columns>
    <columns>AVO_Comp_Ref__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>