force-app/main/default/objects/AVO_Compliance__c/listViews/Cases_resolved.listView-meta.xml
<ListView>
    <fullName>Cases_resolved</fullName>
    <columns>NAME</columns>
    <columns>AVO_CompStatus__c</columns>
    <columns>AVO_CompAction__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVO_CompStatus__c</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <label>Cases resolved</label>
</ListView>