force-app/main/default/objects/AVO_Compliance__c/listViews/Compliance_Specialist_Queue_AVO_Compliance.listView-meta.xml
<ListView>
    <fullName>Compliance_Specialist_Queue_AVO_Compliance</fullName>
    <columns>NAME</columns>
    <columns>AVO_CompStatus__c</columns>
    <columns>AVO_CompAction__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>Compliance Specialist Queue</label>
    <queue>Compliance_Specialist_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>