force-app/main/default/objects/AVO_Compliance__c/listViews/My_Compliances.listView-meta.xml
<ListView>
    <fullName>My_Compliances</fullName>
    <columns>NAME</columns>
    <columns>AVO_CompAction__c</columns>
    <columns>AVO_CompStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVO_CompStatus__c</field>
        <operation>equals</operation>
        <value>Active,Tracking,Resolved</value>
    </filters>
    <label>My Compliances</label>
</ListView>