force-app/main/default/objects/AVO_Compliance__c/listViews/Pending_Submission_Queue_Object_Compli_AVO_Compliance.listView-meta.xml
<ListView>
    <fullName>Pending_Submission_Queue_Object_Compli_AVO_Compliance</fullName>
    <columns>NAME</columns>
    <columns>AVO_CompStatus__c</columns>
    <columns>AVO_CompType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Pending Submission Queue</label>
    <queue>Pending_Submission_Queue_Object_Compli</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>