force-app/main/default/objects/AVO_Compliance__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVO_Compliance_Plan_Submitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Submitted</label>
</ListView>